Better non-semver handling, better license handling for SPDX and custom, improved license checks